discussion/kv_engine/155178/155178_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-29928: Refactor DefragmenterTask::run

Move the code which is executed when 'enabled' to its own function.

Change-Id: I7c651d8ce82446c62858b9dcde7d4b9aa5aa4c9d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-11 12:16:29.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 12:49:25.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9785/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9785/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9785/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8379/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36753/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31414/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10436/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11360/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11509/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11786/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19371/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
